Final Draft commit

--- a/index.html
+++ b/index.html
@@ -91,15 +91,20 @@
 				<li>Techbyte- an IT symposium</li>
 			</ul>
 			<ul class="award-list list-flat">
-				<li>December 2014</li>
-				<li>Audited X number of clients in only Y amount of time</li>
-				<li>Held a perfect attendance record</li>
-				<li>Were promoted after only X months in the role</li>
+				<li>Feb 2016</li>
+				<li>Secured 1 st Position in “Quiz Bee” in the JIMS Techno Cultural Fest</li>
+				<li>Secured 2 nd Position in “Code Debugging” in the JIMS Techno Cultural Fest.</li>
 			</ul>
 			<ul class="award-list list-flat">
-				<li>March 2014</li>
-				<li>Placed employees at X companies</li>
-				<li>United multiple teams post-merger</li>
+				<li>March 2016</li>
+				<li>“Is it true to say OOP vs AOP”</li>
+				<li>Published in “International Journal of Management, IT and Engineering (IJMIE)"
+				</li>
+				<li>ISSN: 2249-0558</li>
+			</ul>
+			<ul class="award-list list-flat">
+				<li>Nov 2016</li>
+				<li>Nptel course certification in “Introduction to Modern Application Development”</li>
 			</ul>
 		</div>
 	</div>
@@ -150,7 +155,7 @@
     <script>
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
-		strings: ["far northern sky", "your galaxy", "everywhere"],
+		strings: ["India", "Delhi", "Everywhere"],
 
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
     </script>
