--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <script>
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
-		strings: ["India", "Delhi", "Everywhere"],
+		strings: ["Milkyway","India", "Delhi"],
 
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
     </script>
