--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<h1>I live in<br><span id="typed"></span></h1>					
 				</div>
 				<p>
-					Hi, my name is Anurag Sharma. I'm graduate in Physics from Delhi University and post graduation
+					Hi, my name is Anurag Sharma. I'm graduated in Physics from Delhi University and post graduated
 					in Computer Aplications from Guru Gobind Singh Indarprastha University. For more download
 					<a href="https://drive.google.com/open?id=0B-bcyetUSvxrbEdXclN3UTJLQVk"> CV</a>
 				</p>				
